--- a/main.css
+++ b/main.css
@@ -23,12 +23,14 @@ body {
     background-position: 50% 50%;
   }
   
+.page {
+    height: 100%;
+    width: 100%;
+}
 
 .home {
     display: table;
     position: absolute;
-    height: 100%;
-    width: 100%;
 }
 
 .middle {
@@ -54,15 +56,22 @@ body {
     margin: 0px;
 }
 
-.inner img {
+.inner ul img {
     width: 42px;
     height: 42px;
+    padding: 0px;
 }
 
 .inner ul {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+}
+
+.inner img {
+    width: 75px;
+    height: 50px;
+    padding: 100px 0px 0px 0px;
 }
 
 .inner li a {
